create a new message for 'Always do this' instead of using the existing one to avoid localization issue.

IDS_TRANSLATE_BUBBLE_ALWAYS was "Always translate" before I land https://chromium.googlesource.com/chromium/src/+/480f549656ed91077cbb157b07919fbddf8e1172 [formerly 7223e2c7d071d74bcd66c5a113e97fe21a82bb68]
in that cl, I change it to "Always do this" but that break the pre-existing localization. So in here I change it back to "Always translate" but create a new one IDS_TRANSLATE_BUBBLE_ALWAYS_DO_THIS for the new one.

BUG=610658

Review-Url: https://codereview.chromium.org/1963183002
Cr-Commit-Position: refs/heads/master@{#392729}

Former-commit-id: ed8bfa85a2d506d4ebe5e7b9d1840fe1e59e7d6c